--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,17 +13,17 @@ services:
     ports:
       - "5432:5432"
 
-  web:
-    build: .
-    depends_on:
-      - db
-    ports:
-      - "8000:8000"
-    environment:
-      DATABASE_URL: postgresql://test:test@db:5432/shorten_url_db
-    volumes:
-      - .:/app
-    command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload
+  # web:
+  #   build: .
+  #   depends_on:
+  #     - db
+  #   ports:
+  #     - "8000:8000"
+  #   environment:
+  #     DATABASE_URL: postgresql://test:test@db:5432/shorten_url_db
+  #   volumes:
+  #     - .:/app
+  #   command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload
 
 volumes:
   postgres_data:
