--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-fastapi
-uvicorn[standard]
-psycopg2-binary
-sqlalchemy
-python-dotenv
+alembic==1.16.1
+greenlet==3.2.2
+Mako==1.3.10
+MarkupSafe==3.0.2
+SQLAlchemy==2.0.41
+tomli==2.2.1
+typing_extensions==4.14.0
