[feature]: Add alembic base configs

--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
-DATABASE_URL=postgresql://test:test@localhost:5432/shorten_url_db
+DATABASE_DRIVER=postgresql
+DATABASE_USERNAME=test
+DATABASE_PASSWORD=test
+DATABASE_HOST=localhost
+DATABASE_PORT=5432
+DATABASE_NAME=shorten_url_db
