--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ cffi==1.17.1
 click==8.2.1
 colorama==0.4.6
 cryptography==45.0.3
+Deprecated==1.2.18
 dnspython==2.7.0
 dotenv==0.9.9
 ecdsa==0.19.1
@@ -21,10 +22,12 @@ httptools==0.6.4
 httpx==0.28.1
 idna==3.10
 Jinja2==3.1.6
+limits==5.2.0
 Mako==1.3.10
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+packaging==25.0
 passlib==1.7.4
 psycopg2-binary==2.9.10
 pyasn1==0.6.1
@@ -41,6 +44,7 @@ rich-toolkit==0.14.7
 rsa==4.9.1
 shellingham==1.5.4
 six==1.17.0
+slowapi==0.1.9
 sniffio==1.3.1
 SQLAlchemy==2.0.41
 starlette==0.46.2
@@ -52,3 +56,4 @@ uvicorn==0.34.3
 uvloop==0.21.0
 watchfiles==1.0.5
 websockets==15.0.1
+wrapt==1.17.2
