--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 DATABASE_DRIVER=postgresql
 DATABASE_USERNAME=test
 DATABASE_PASSWORD=test
-DATABASE_HOST=localhost
+DATABASE_HOST=db
 DATABASE_PORT=5432
 DATABASE_NAME=shorten_url_db
 
