--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,27 +1,31 @@
+version: "3.9"
+
 services:
   db:
     image: postgres:15
     restart: always
+    env_file:
+      - .env
     environment:
-      POSTGRES_USER: test
-      POSTGRES_PASSWORD: test
-      POSTGRES_DB: shorten_url_db
+      POSTGRES_USER: ${DATABASE_USERNAME}
+      POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
+      POSTGRES_DB: ${DATABASE_NAME}
     volumes:
       - postgres_data:/var/lib/postgresql/data
     ports:
-      - "5432:5432"
+      - "5433:5432"
 
-  # web:
-  #   build: .
-  #   depends_on:
-  #     - db
-  #   ports:
-  #     - "8000:8000"
-  #   environment:
-  #     DATABASE_URL: postgresql://test:test@db:5432/shorten_url_db
-  #   volumes:
-  #     - .:/app
-  #   command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload
+  web:
+    build: .
+    depends_on:
+      - db
+    ports:
+      - "8000:8000"
+    env_file:
+      - .env
+    volumes:
+      - .:/app
+    command: sh ./start.sh
 
 volumes:
   postgres_data:
